// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverflowMenuControl Additional Options 1`] = `
<Component
  hasAdditionalOptions={true}
>
  <div
    className="pf-c-overflow-menu__control"
  >
     
     
  </div>
</Component>
`;

exports[`OverflowMenuControl basic 1`] = `
<Component>
  <div
    className="pf-c-overflow-menu__control"
  >
     
     
  </div>
</Component>
`;
